Fixed bug #41215 (setAttribute return code reversed).